--- a/dhis2.html
+++ b/dhis2.html
@@ -52,7 +52,7 @@
 							<span class="image main"><img src="images/dhisbanner.png" alt="" /></span>
 							<p>Høst 2018 avholdt jeg faget IN5320 – Development in Platform Ecosystems. Prosjektet vårt "Doctors diary", gikk ut på å lage en applikasjon for å sende rapporter mellom en District Health Officer (DHO) og en doktor i de forskjellige distriktene.</p>
 							<p>Basert på en kravspec og behov laget vi en applikasjon som kobles opp mot platformen til DHIS2 gjennom deres web API. Ved bruk av teknologier som React, html og css skapte vi et grenesnitt for doktorer og helseministre for å rapportere og se på rapporter. Vi brukte sketch for å skissere og komponenter fra Material UI til å skape et oversiktlig grensesnitt.</p>
-							<p>Dette kurset handlet mer om å fullføre en teknisk kravspesifikasjon og implementering av flest mulig funksjoner, enn å iterere på design og lage et pent grensesnitt. Det ble derfor bare lagd enkle funksjonelle prototyper som ikke hadde fokus på estetikk.</p>
+							<p>DDette kurset handlet mer om å fullføre en teknisk kravspesifikasjon og implementering av funksjoner enn å iterere på design med fokus på grensesnitt. Av den grunn ble det lagd enkle funksjonelle prototyper uten fokus på brukerinvolvering. Vi hadde derimot heller ikke sluttbrukerne av applikasjonen tilgjengelige for dette kurset, så resultatet ble en blanding av krav og genius design.</p>
 						</div>
 					</div>
 
@@ -63,8 +63,7 @@
 								<h3>Kontakt meg</h3>
 								<h4><a href="mailto:tidemanntronerud@gmail.com">tidemanntronerud@gmail.com</a></h4>
 								<ul class="icons">
-										<li><a href="#" class="fab fa-linkedin-in"><span class="label"></span></a></li>
-										<li><a href="#" class="fas fa-phone"><span class="label"></span></a></li>
+										<li><a href="https://www.linkedin.com/in/tidemann-telix-tronerud-4684ba15a" class="fab fa-linkedin-in"><span class="label"></span></a></li>
 										<li><a href="mailto:tidemanntronerud@gmail.com" class="fas fa-envelope"><span class="label"></span></a></li>
 									</ul>
 							</section>
