--- a/formdommer.html
+++ b/formdommer.html
@@ -63,8 +63,7 @@
 								<h3>Kontakt meg</h3>
 								<h4><a href="mailto:tidemanntronerud@gmail.com">tidemanntronerud@gmail.com</a></h4>
 								<ul class="icons">
-										<li><a href="#" class="fab fa-linkedin-in"><span class="label"></span></a></li>
-										<li><a href="#" class="fas fa-phone"><span class="label"></span></a></li>
+										<li><a href="https://www.linkedin.com/in/tidemann-telix-tronerud-4684ba15a" class="fab fa-linkedin-in"><span class="label"></span></a></li>
 										<li><a href="mailto:tidemanntronerud@gmail.com" class="fas fa-envelope"><span class="label"></span></a></li>
 									</ul>
 							</section>
