--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
 						<h2>Meny</h2>
 						<ul>
 							<li><a href="index.html">Hjem</a></li>
-							<li><a href="index.html">Under konstruksjon</a></li>
 						</ul>
 					</nav>
 
@@ -53,6 +52,23 @@
 								<h1>Hei, jeg heter <a href="https://www.linkedin.com/in/tidemann-telix-tronerud-4684ba15a">Tidemann</a></h1>
 								<p>og her er noen av prosjektene mine &#128378;</p>
 							</header>
+							<br>
+							<h2>Mine konsulentjobber</h2>
+							<section class="tiles">
+								<article class="style7">
+									<span class="image">
+										<img src="images/sio1.png" alt="" />
+									</span>
+									<a href="sio.html">
+										<h2>SiO</h2>
+										<div class="content">
+											<p>Nye nettsider for Studentsamskipnaden i Oslo</p>
+										</div>
+									</a>
+								</article>
+							</section>
+							<br>
+							<h2>Erfaring under studiet</h2>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
