--- a/sio.html
+++ b/sio.html
@@ -48,10 +48,11 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Memini cube - Bruksentrert design</h1>
-							<span class="image main"><img src="images/meminigif.gif" alt="" /></span>
-							<p>INF1510 - Bruksorientert design er et emne ved UiO som jeg avholdt våren 2016. Prosjektet handlet om å skape et fysisk produkt med Arduino for en valgt brukergruppe basert på deres behov. Emnet la vekt på at man skal kunne kombinere bruksforståelse med teknisk forståelse.</p>
-							<p>Vi valgte eldre som brukergruppe, hvor vi i løpet av flere workshops og intervjuer med beboere på eldrehjem endte opp med en problemstilling. Vanskeligheter med å huske passord var det som gikk igjen mest, da flere av de hadde skrevet ned passord i flere forskjellige notatbøker og slet med å holde orden. Vi så på ulike former som kunne hjelpe de med dette og observerte de mens de testet enkle prototyper. Resultatet ble en arduino-basert løsning med forskjellige fysiske kuber med NFC-brikker og en LCD-skjerm.</p>
+							<h1>Nye nettsider for SiO</h1>
+							<span class="image main"><img src="images/sio2.png" alt="" /></span>
+							<span class="image main"><img src="images/sio3.png" alt="" /></span>
+							<p>Prosjektet går ut på å lage nye nettsider for SiO.no. Deres hovedmål med prosjektet er å forbedre brukervennligheten og det visuelle på siden samtidig som eksiterende funksjonalitet migreres til nytt CMS i Enonic. Identitet, design og merkevare videreutvikles og det jobbes med designsystem gjennom hele prosessen. Det opprettes nytt redaktørgrensesnitt, innholdsstrategi og bygges nye funksjonelle maler. </p>
+							<p>SiO er studentsamskipnaden for 28 studiesteder i Osloregionen, og tilbyr produkter og tjenester som gjør studiehverdagen effektiv og stimulerende til 67 000 studenter. De har blant annet SiO Bolig, som har  8900 boenheter fordelt på 24 studentbyer/-hus i Oslo og Akershus. Dette er altså et stort sosio-teknisk komplekst informasjonssystem, som også krevde en form for dokumentasjon av nettsiden deres, ettersom dette ikke allerede eksisterte.</p>
 						</div>
 					</div>
 
