--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								<p>og her er noen av prosjektene mine &#128378;</p>
 							</header>
 							<br>
-							<h2>Mine konsulentjobber</h2>
+							<h2>Prosjekter</h2>
 							<section class="tiles">
 								<article class="style11">
 									<span class="image">
@@ -70,7 +70,7 @@
 							<br>
 							<br>
 							<br>
-							<h2>Erfaring under studiet</h2>
+							<h2>I løpet av mastergraden</h2>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
