--- a/sio.html
+++ b/sio.html
@@ -48,7 +48,10 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<h1>Nye nettsider for SiO</h1>
+							<a href="www.sio.no">
+								<h1>Nye nettsider for SiO</h1>
+							</a>
+							
 							<span class="sio-images"><img src="images/sio2.png" alt="" /><img src="images/sio3.png" alt="" /><img src="images/sio4.png" alt="" /></span>
 							<p>Prosjektet går ut på å lage nye nettsider for SiO.no. Deres hovedmål med prosjektet er å forbedre brukervennligheten og det visuelle på siden samtidig som eksiterende funksjonalitet migreres til nytt CMS i Enonic. Identitet, design og merkevare videreutvikles og det jobbes med designsystem gjennom hele prosessen. Det opprettes nytt redaktørgrensesnitt, innholdsstrategi og bygges nye funksjonelle maler.SiO er studentsamskipnaden for 28 studiesteder i Osloregionen, og tilbyr produkter og tjenester som gjør studiehverdagen effektiv og stimulerende til 67 000 studenter. De har blant annet SiO Bolig, som har  8900 boenheter fordelt på 24 studentbyer/-hus i Oslo og Akershus. Dette er altså et stort sosio-teknisk komplekst informasjonssystem, som også krevde en form for dokumentasjon av nettsiden deres, ettersom dette ikke allerede eksisterte. </p>
 						
