--- a/sio.html
+++ b/sio.html
@@ -48,7 +48,7 @@
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-							<a href="www.sio.no">
+							<a href="https://www.sio.no">
 								<h1>Nye nettsider for sio.no</h1>
 							</a>
 							
