--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 						<div class="inner">
 							<header>
 								<h1>Hei, jeg heter <a href="https://www.linkedin.com/in/tidemann-telix-tronerud-4684ba15a">Tidemann</a></h1>
-								<p>og her er noen av prosjektene mine &#128378;</p>
+								<p>og her er noen av prosjektene mine</p>
 							</header>
 							<br>
-							<h2>Prosjekter</h2>
+							<h3>Prosjekter</h3>
 							<section class="tiles">
 								<article class="style11">
 									<span class="image">
@@ -70,7 +70,7 @@
 							<br>
 							<br>
 							<br>
-							<h2>I løpet av mastergraden</h2>
+							<h3>I løpet av mastergraden</h3>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
