--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 						<div class="inner">
 							<header>
 								<h1>Hei, jeg heter <a href="https://www.linkedin.com/in/tidemann-telix-tronerud-4684ba15a">Tidemann</a></h1>
-								<p>og her er noen av prosjektene mine</p>
+								<p>jobber som UX-designer, og her er noen av prosjektene mine 🕺</p>
 							</header>
 							<br>
-							<h3>Prosjekter</h3>
+							<h3>Som konsulent</h3>
 							<section class="tiles">
 								<article class="style11">
 									<span class="image">
