--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								<p>jobber som UX-designer, og her er noen av prosjektene mine 🕺</p>
 							</header>
 							<br>
-							<h3>Som konsulent</h3>
+							<h3>Kundeoppdrag</h3>
 							<section class="tiles">
 								<article class="style11">
 									<span class="image">
@@ -70,7 +70,7 @@
 							<br>
 							<br>
 							<br>
-							<h3>I løpet av mastergraden</h3>
+							<h3>Under masterstudiet</h3>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
