--- a/index.html
+++ b/index.html
@@ -55,6 +55,19 @@
 							<br>
 							<h3>Kundeoppdrag</h3>
 							<section class="tiles">
+								<article class="style12">
+									<span class="image">
+										<img src="images/vibbo1.png" alt="" />
+									</span>
+									<a href="vibbo.html">
+										<h2>Vibbo</h2>
+										<div class="content">
+											<p>Designsystem og nye tjenester for nabolagsappen Vibbo fra Obos</p>
+										</div>
+									</a>
+								</article>
+							</section>
+							<section class="tiles">
 								<article class="style11">
 									<span class="image">
 										<img src="images/sio1.png" alt="" />
