--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@
 							<br>
 							<h3>Kundeoppdrag</h3>
 							<section class="tiles">
+								<article class="style13">
+									<span class="image">
+										<img src="images/dibber1.png" alt="" />
+									</span>
+									<a href="dibber.html">
+										<h2>Dibber</h2>
+										<div class="content">
+											<p>App- og webdesign for barnehagetjenesten Dibber</p>
+										</div>
+									</a>
+								</article>
 								<article class="style12">
 									<span class="image">
 										<img src="images/vibbo1.png" alt="" />
