--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<div class="inner">
 							<header>
 								<h1>Hei, jeg heter <a href="https://www.linkedin.com/in/tidemann-telix-tronerud-4684ba15a">Tidemann</a></h1>
-								<p>jeg jobber som UX-designer, og her er noen av prosjektene mine 🕺</p>
+								<p>jeg jobber som UX-designer, og her er noen av prosjektene mine</p>
 							</header>
 							<br>
 							<h3>Kundeoppdrag</h3>
