--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Hei, jeg heter <a href="https://www.linkedin.com/in/tidemann-telix-tronerud-4684ba15a">Tidemann</a></h1>
-								<p>jeg jobber som UX-designer, og her er noen av prosjektene mine</p>
+								<h1>Hei, jeg er <a href="https://www.linkedin.com/in/tidemann-telix-tronerud-4684ba15a">Tidemann</a></h1>
+								<p>Jeg jobber som UX-designer, her er noen av prosjektene mine</p>
 							</header>
 							<br>
 							<h3>Kundeoppdrag</h3>
